--- a/example/main_doc.html
+++ b/example/main_doc.html
@@ -163,7 +163,7 @@
 <h1>Project management</h1>
 <div id="project-structure" class="section level3">
 <h3>Project structure</h3>
-<p>Check <a href="../README.md">README.md</a> for a reminder of the project file structure.</p>
+<p>Check <a href="https://github.com/gauerlucas/Rproj-template/blob/f3c377d723a70cedf5a403bd1a2296c76a215720/README.md">README.md</a> for a reminder of the project file structure.</p>
 </div>
 <div id="libraries-used-in-this-project" class="section level3">
 <h3>Libraries used in this project</h3>
@@ -487,12 +487,12 @@ complete_table %&gt;%
 ## Error in wilcox.test.formula(as.numeric(taille) ~ as.factor(sex), data = structure(list(: grouping factor must have exactly 2 levels
 ## There was an error in &#39;add_p()/add_difference()&#39; for variable &#39;imc&#39;, p-value omitted:
 ## Error in wilcox.test.formula(as.numeric(imc) ~ as.factor(sex), data = structure(list(: grouping factor must have exactly 2 levels</code></pre>
-<div id="dnjzkpimca" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="rsmboofllw" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#dnjzkpimca .gt_table {
+#rsmboofllw .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -517,7 +517,7 @@ complete_table %&gt;%
   border-left-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_heading {
+#rsmboofllw .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -529,7 +529,7 @@ complete_table %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_title {
+#rsmboofllw .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -539,7 +539,7 @@ complete_table %&gt;%
   border-bottom-width: 0;
 }
 
-#dnjzkpimca .gt_subtitle {
+#rsmboofllw .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -549,13 +549,13 @@ complete_table %&gt;%
   border-top-width: 0;
 }
 
-#dnjzkpimca .gt_bottom_border {
+#rsmboofllw .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_col_headings {
+#rsmboofllw .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -570,7 +570,7 @@ complete_table %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_col_heading {
+#rsmboofllw .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -590,7 +590,7 @@ complete_table %&gt;%
   overflow-x: hidden;
 }
 
-#dnjzkpimca .gt_column_spanner_outer {
+#rsmboofllw .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -602,15 +602,15 @@ complete_table %&gt;%
   padding-right: 4px;
 }
 
-#dnjzkpimca .gt_column_spanner_outer:first-child {
+#rsmboofllw .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#dnjzkpimca .gt_column_spanner_outer:last-child {
+#rsmboofllw .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#dnjzkpimca .gt_column_spanner {
+#rsmboofllw .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -622,7 +622,7 @@ complete_table %&gt;%
   width: 100%;
 }
 
-#dnjzkpimca .gt_group_heading {
+#rsmboofllw .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -644,7 +644,7 @@ complete_table %&gt;%
   vertical-align: middle;
 }
 
-#dnjzkpimca .gt_empty_group_heading {
+#rsmboofllw .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -659,15 +659,15 @@ complete_table %&gt;%
   vertical-align: middle;
 }
 
-#dnjzkpimca .gt_from_md > :first-child {
+#rsmboofllw .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#dnjzkpimca .gt_from_md > :last-child {
+#rsmboofllw .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#dnjzkpimca .gt_row {
+#rsmboofllw .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -686,7 +686,7 @@ complete_table %&gt;%
   overflow-x: hidden;
 }
 
-#dnjzkpimca .gt_stub {
+#rsmboofllw .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -698,7 +698,7 @@ complete_table %&gt;%
   padding-left: 12px;
 }
 
-#dnjzkpimca .gt_summary_row {
+#rsmboofllw .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -708,7 +708,7 @@ complete_table %&gt;%
   padding-right: 5px;
 }
 
-#dnjzkpimca .gt_first_summary_row {
+#rsmboofllw .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -718,7 +718,7 @@ complete_table %&gt;%
   border-top-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_grand_summary_row {
+#rsmboofllw .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -728,7 +728,7 @@ complete_table %&gt;%
   padding-right: 5px;
 }
 
-#dnjzkpimca .gt_first_grand_summary_row {
+#rsmboofllw .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -738,11 +738,11 @@ complete_table %&gt;%
   border-top-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_striped {
+#rsmboofllw .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#dnjzkpimca .gt_table_body {
+#rsmboofllw .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -751,7 +751,7 @@ complete_table %&gt;%
   border-bottom-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_footnotes {
+#rsmboofllw .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -765,13 +765,13 @@ complete_table %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_footnote {
+#rsmboofllw .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#dnjzkpimca .gt_sourcenotes {
+#rsmboofllw .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -785,41 +785,41 @@ complete_table %&gt;%
   border-right-color: #D3D3D3;
 }
 
-#dnjzkpimca .gt_sourcenote {
+#rsmboofllw .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#dnjzkpimca .gt_left {
+#rsmboofllw .gt_left {
   text-align: left;
 }
 
-#dnjzkpimca .gt_center {
+#rsmboofllw .gt_center {
   text-align: center;
 }
 
-#dnjzkpimca .gt_right {
+#rsmboofllw .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#dnjzkpimca .gt_font_normal {
+#rsmboofllw .gt_font_normal {
   font-weight: normal;
 }
 
-#dnjzkpimca .gt_font_bold {
+#rsmboofllw .gt_font_bold {
   font-weight: bold;
 }
 
-#dnjzkpimca .gt_font_italic {
+#rsmboofllw .gt_font_italic {
   font-style: italic;
 }
 
-#dnjzkpimca .gt_super {
+#rsmboofllw .gt_super {
   font-size: 65%;
 }
 
-#dnjzkpimca .gt_footnote_marks {
+#rsmboofllw .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
